--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta name="format-detection" content="telephone=no"/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>express</title>
-    <script src="http://g.tbcdn.cn/mtb/lib-flexible/0.3.4/??flexible_css.js,flexible.js"></script>
+    <script src="<%= BASE_URL %>js/lib-flexible.js"></script>
     <script src="https://cdn.bootcss.com/babel-polyfill/6.23.0/polyfill.min.js"></script>
     <script src="https://cdn.bootcss.com/vue/2.5.13/vue.min.js"></script>
     <script src="https://cdn.bootcss.com/vue-router/3.0.1/vue-router.min.js"></script>
